[package]
name = "learn_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
accesskit = "0.18.0"
arboard = "3.5.0"
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = [
#     "experimental_bevy_feathers",
#     "hotpatching",
# ] }
bevy = { version = "0.17.2", features = ["track_location"] }
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master", features = [
#     "simd-stable",
#     "debug-render-2d",
#     #"serde-serialize",
# ] }
bitflags = "2.9.4"
contour = { version = "0.13.1", features = ["f32", "geojson"] }
crossbeam-channel = "0.5.15"
image = "0.25.6"
log = "0.4.27"
lyon = "1.0.1"
# once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "*"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["full"] }


# [profile.dev.package.bevy_rapier2d]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true

### custom examples
[[example]]
name = "dither"
path = "examples/custom/shader/dither.rs"

[[example]]
name = "annulus"
path = "examples/custom/shader/annulus.rs"

# official examples
### ecs 
[[example]]
name = "change_detection"
path = "examples/ecs/change_detection.rs"

[[example]]
name = "component_hooks"
path = "examples/ecs/component_hooks.rs"

[[example]]
name = "custom_query_param"
path = "examples/ecs/custom_query_param.rs"

[[example]]
name = "custom_schedule"
path = "examples/ecs/custom_schedule.rs"

[[example]]
name = "dynamic"
path = "examples/ecs/dynamic.rs"

[[example]]
name = "ecs_guide"
path = "examples/ecs/ecs_guide.rs"

[[example]]
name = "message"
path = "examples/ecs/message.rs"

[[example]]
name = "fallible_params"
path = "examples/ecs/fallible_params.rs"

[[example]]
name = "fixed_timestep"
path = "examples/ecs/fixed_timestep.rs"

[[example]]
name = "generic_system"
path = "examples/ecs/generic_system.rs"

[[example]]
name = "hierarchy"
path = "examples/ecs/hierarchy.rs"

[[example]]
name = "iter_combinations"
path = "examples/ecs/iter_combinations.rs"

### ui
[[example]]
name = "ui_material"
path = "examples/ui/ui_material.rs"


### shader
[[example]]
name = "shader_material_2d"
path = "examples/shader/shader_material_2d.rs"

[[example]]
name = "compute_shader_game_of_life"
path = "examples/shader/compute_shader_game_of_life.rs"


# preview version 0.16.0

# # Integrated Experiments #
# [[example]]
# name = "camera_renderlayer"
# path = "examples/custom/experiment/camera_renderlayer/main.rs"

# [[example]]
# name = "inventory"
# path = "examples/custom/experiment/inventory/main.rs"

# [[example]]
# name = "hexagon_tile"
# path = "examples/custom/experiment/hexagon_tile/main.rs"

# [[example]]
# name = "space_battle"
# path = "examples/custom/experiment/space_battle/main.rs"


# Rapier2d Experiments
# [[example]]
# name = "rapier_rigid_type"
# path = "examples/rapier2d/rigid_type.rs"

# [[example]]
# name = "rapier_rigid_related"
# path = "examples/rapier2d/rigid_related.rs"

# [[example]]
# name = "rapier_rigid_kinematic"
# path = "examples/rapier2d/rigid_kinematic.rs"

# [[example]]
# name = "rapier_collider_type"
# path = "examples/rapier2d/collider_type.rs"

# [[example]]
# name = "rapier_collider_related"
# path = "examples/rapier2d/collider_related.rs"

# [[example]]
# name = "rapier_collider_event"
# path = "examples/rapier2d/collider_event.rs"

# [[example]]
# name = "rapier_joints"
# path = "examples/rapier2d/joints.rs"

# [[example]]
# name = "rapier_joints_motor"
# path = "examples/rapier2d/joints_motor.rs"

# [[example]]
# name = "rapier_scene_queries_cast"
# path = "examples/rapier2d/scene_queries_cast.rs"

# [[example]]
# name = "rapier_scene_queries_projection"
# path = "examples/rapier2d/scene_queries_projection.rs"

# [[example]]
# name = "rapier_scene_queries_intersections"
# path = "examples/rapier2d/scene_queries_intersections.rs"

# [[example]]
# name = "rapier_advanced_detection"
# path = "examples/rapier2d/advanced_detection.rs"

# custom example for desktop app
# [[example]]
# name = "ffui"
# path = "examples/custom/desktop/ffui/main.rs"
