[package]
name = "learn_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
accesskit = "0.18.0"
arboard = "3.5.0"
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = [
#     "experimental_bevy_feathers",
#     "hotpatching",
# ] }
bevy = { version = "0.17.2", features = ["track_location", "bevy_dev_tools"] }
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master", features = [
#     "simd-stable",
#     "debug-render-2d",
#     #"serde-serialize",
# ] }
bitflags = "2.9.4"
contour = { version = "0.13.1", features = ["f32", "geojson"] }
crossbeam-channel = "0.5.15"
image = "0.25.6"
log = "0.4.27"
lyon = "1.0.1"
# once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "*"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["full"] }
futures-timer = "3.0.2"


# [profile.dev.package.bevy_rapier2d]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true

### custom examples #################################
[[example]]
name = "dither"
path = "examples/custom/shader/dither.rs"

[[example]]
name = "annulus"
path = "examples/custom/shader/annulus.rs"

[[example]]
name = "noise_distortion_1d"
path = "examples/custom/shader/noise_distortion_1d.rs"

[[example]]
name = "noise_distortion_2d"
path = "examples/custom/shader/noise_distortion_2d.rs"


### 2d ###
[[example]]
name = "2d_shapes.rs"
path = "examples/2d/2d_shapes.rs"

# todo: restructure
[[example]]
name = "2d_viewport_to_world"
path = "examples/2d/2d_viewport_to_world.rs"

[[example]]
name = "bloom_2d"
path = "examples/2d/bloom_2d.rs"

[[example]]
name = "mesh2d_arcs"
path = "examples/2d/mesh2d_arcs.rs"

# [[example]]
# name = "mesh2d_manual"
# path = "examples/2d/mesh2d_manual.rs"

[[example]]
name = "mesh2d_vertex_color_texture"
path = "examples/2d/mesh2d_vertex_color_texture.rs"

[[example]]
name = "mesh2d"
path = "examples/2d/mesh2d.rs"

[[example]]
name = "rotation"
path = "examples/2d/rotation.rs"

[[example]]
name = "sprite_animation"
path = "examples/2d/sprite_animation.rs"

[[example]]
name = "sprite_flipping"
path = "examples/2d/sprite_flipping.rs"

[[example]]
name = "sprite_sheet"
path = "examples/2d/sprite_sheet.rs"

[[example]]
name = "sprite_slice"
path = "examples/2d/sprite_slice.rs"

[[example]]
name = "sprite_tile"
path = "examples/2d/sprite_tile.rs"

[[example]]
name = "text2d"
path = "examples/2d/text2d.rs"

[[example]]
name = "texture_atlas"
path = "examples/2d/texture_atlas.rs"

# todo
# [[example]]
# name = "tilemap_chunk"
# path = "examples/2d/tilemap_chunk.rs"

[[example]]
name = "transparency_2d"
path = "examples/2d/transparency_2d.rs"


### async_tasks #################################
[[example]]
name = "async_compute"
path = "examples/async_tasks/async_compute.rs"

### input #################################
[[example]]
name = "char_input_events"
path = "examples/input/char_input_events.rs"

[[example]]
name = "keyboard_modifiers"
path = "examples/input/keyboard_modifiers.rs"

[[example]]
name = "mouse_grab"
path = "examples/input/mouse_grab.rs"

[[example]]
name = "text_input"
path = "examples/input/text_input.rs"


### ecs #################################
[[example]]
name = "change_detection"
path = "examples/ecs/change_detection.rs"

[[example]]
name = "component_hooks"
path = "examples/ecs/component_hooks.rs"

[[example]]
name = "custom_query_param"
path = "examples/ecs/custom_query_param.rs"

[[example]]
name = "custom_schedule"
path = "examples/ecs/custom_schedule.rs"

[[example]]
name = "dynamic"
path = "examples/ecs/dynamic.rs"

[[example]]
name = "ecs_guide"
path = "examples/ecs/ecs_guide.rs"

# ! skip
# [[example]]
# name = "entity_disabling"
# path = "examples/ecs/entity_disabling.rs"

# ! skip
# [[example]]
# name = "error_handling"
# path = "examples/ecs/error_handling.rs"


[[example]]
name = "fallible_params"
path = "examples/ecs/fallible_params.rs"

[[example]]
name = "fixed_timestep"
path = "examples/ecs/fixed_timestep.rs"

[[example]]
name = "generic_system"
path = "examples/ecs/generic_system.rs"

[[example]]
name = "hierarchy"
path = "examples/ecs/hierarchy.rs"

[[example]]
name = "iter_combinations"
path = "examples/ecs/iter_combinations.rs"

[[example]]
name = "message"
path = "examples/ecs/message.rs"

[[example]]
name = "nondeterministic_systems_order"
path = "examples/ecs/nondeterministic_systems_order.rs"

[[example]]
name = "observer_propagation"
path = "examples/ecs/observer_propagation.rs"

[[example]]
name = "observers"
path = "examples/ecs/observers.rs"

[[example]]
name = "one_shot_systems"
path = "examples/ecs/one_shot_systems.rs"

[[example]]
name = "parallel_query"
path = "examples/ecs/parallel_query.rs"

[[example]]
name = "query"
path = "examples/ecs/query.rs"

# todo
# [[example]]
# name = "relationships"
# path = "examples/ecs/relationships.rs"

[[example]]
name = "removal_detection"
path = "examples/ecs/removal_detection.rs"

[[example]]
name = "run_conditions"
path = "examples/ecs/run_conditions.rs"

# review
[[example]]
name = "send_and_receive_messages"
path = "examples/ecs/send_and_receive_messages.rs"

# ! skip
# [[example]]
# name = "startup_system"
# path = "examples/ecs/startup_system.rs"

# todo
# [[example]]
# name = "state_scoped"
# path = "examples/ecs/state_scoped.rs"

[[example]]
name = "system_closure"
path = "examples/ecs/system_closure.rs"

# review
[[example]]
name = "system_param"
path = "examples/ecs/system_param.rs"

[[example]]
name = "system_piping"
path = "examples/ecs/system_piping.rs"

[[example]]
name = "system_stepping"
path = "examples/ecs/system_stepping.rs"

### math #################################
[[example]]
name = "bounding_2d"
path = "examples/math/bounding_2d.rs"

### movement #################################
# todo: review
[[example]]
name = "physics_in_fixed_timestep"
path = "examples/movement/physics_in_fixed_timestep.rs"

# todo: review
[[example]]
name = "smooth_follow"
path = "examples/movement/smooth_follow.rs"

### picking #################################
# todo: restructure
[[example]]
name = "debug_picking"
path = "examples/picking/debug_picking.rs"

# todo: restructure
[[example]]
name = "mesh_picking"
path = "examples/picking/mesh_picking.rs"

# todo: restructure
[[example]]
name = "simple_picking"
path = "examples/picking/simple_picking.rs"

# todo: restructure
[[example]]
name = "sprite_picking"
path = "examples/picking/sprite_picking.rs"

### scene #################################
# todo: restructure
[[example]]
name = "scene"
path = "examples/scene/scene.rs"

### shader #################################
[[example]]
name = "shader_material_2d"
path = "examples/shader/shader_material_2d.rs"

[[example]]
name = "compute_shader_game_of_life"
path = "examples/shader/compute_shader_game_of_life.rs"


### state #################################
[[example]]
name = "compute_states"
path = "examples/state/compute_states.rs"

[[example]]
name = "states"
path = "examples/state/states.rs"

[[example]]
name = "sub_states"
path = "examples/state/sub_states.rs"

### time #################################
[[example]]
name = "time"
path = "examples/time/time.rs"

[[example]]
name = "timers"
path = "examples/time/timers.rs"

[[example]]
name = "virtual_time"
path = "examples/time/virtual_time.rs"

### ui #################################
[[example]]
name = "flex_layout"
path = "examples/ui/flex_layout.rs"

[[example]]
name = "grid"
path = "examples/ui/grid.rs"

[[example]]
name = "overflow"
path = "examples/ui/overflow.rs"

[[example]]
name = "relative_cursor_position"
path = "examples/ui/relative_cursor_position.rs"

# todo: review
[[example]]
name = "render_ui_to_texture"
path = "examples/ui/render_ui_to_texture.rs"

[[example]]
name = "ui_material"
path = "examples/ui/ui_material.rs"

[[example]]
name = "ui_scaling"
path = "examples/ui/ui_scaling.rs"


# previous version 0.16.0

# # Integrated Experiments #
# [[example]]
# name = "camera_renderlayer"
# path = "examples/custom/experiment/camera_renderlayer/main.rs"

# [[example]]
# name = "inventory"
# path = "examples/custom/experiment/inventory/main.rs"

# [[example]]
# name = "hexagon_tile"
# path = "examples/custom/experiment/hexagon_tile/main.rs"

# [[example]]
# name = "space_battle"
# path = "examples/custom/experiment/space_battle/main.rs"


# Rapier2d Experiments
# [[example]]
# name = "rapier_rigid_type"
# path = "examples/rapier2d/rigid_type.rs"

# [[example]]
# name = "rapier_rigid_related"
# path = "examples/rapier2d/rigid_related.rs"

# [[example]]
# name = "rapier_rigid_kinematic"
# path = "examples/rapier2d/rigid_kinematic.rs"

# [[example]]
# name = "rapier_collider_type"
# path = "examples/rapier2d/collider_type.rs"

# [[example]]
# name = "rapier_collider_related"
# path = "examples/rapier2d/collider_related.rs"

# [[example]]
# name = "rapier_collider_event"
# path = "examples/rapier2d/collider_event.rs"

# [[example]]
# name = "rapier_joints"
# path = "examples/rapier2d/joints.rs"

# [[example]]
# name = "rapier_joints_motor"
# path = "examples/rapier2d/joints_motor.rs"

# [[example]]
# name = "rapier_scene_queries_cast"
# path = "examples/rapier2d/scene_queries_cast.rs"

# [[example]]
# name = "rapier_scene_queries_projection"
# path = "examples/rapier2d/scene_queries_projection.rs"

# [[example]]
# name = "rapier_scene_queries_intersections"
# path = "examples/rapier2d/scene_queries_intersections.rs"

# [[example]]
# name = "rapier_advanced_detection"
# path = "examples/rapier2d/advanced_detection.rs"

# custom example for desktop app
# [[example]]
# name = "ffui"
# path = "examples/custom/desktop/ffui/main.rs"
