[package]
name = "learn_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
accesskit = "0.18.0"
arboard = "3.5.0"
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = [
#     "experimental_bevy_feathers",
#     "hotpatching",
# ] }
bevy = { version = "0.17.2", features = ["track_location", "bevy_dev_tools"] }
# bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master", features = [
#     "simd-stable",
#     "debug-render-2d",
#     #"serde-serialize",
# ] }
bitflags = "2.9.4"
contour = { version = "0.13.1", features = ["f32", "geojson"] }
crossbeam-channel = "0.5.15"
image = "0.25.6"
log = "0.4.27"
lyon = "1.0.1"
# once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "*"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["full"] }
futures-timer = "3.0.2"


# [profile.dev.package.bevy_rapier2d]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true

### custom examples #################################
[[example]]
name = "dither"
path = "examples/custom/shader/dither.rs"

[[example]]
name = "annulus"
path = "examples/custom/shader/annulus.rs"

[[example]]
name = "noise_distortion_1d"
path = "examples/custom/shader/noise_distortion_1d.rs"

[[example]]
name = "noise_distortion_2d"
path = "examples/custom/shader/noise_distortion_2d.rs"
